Add better error handling when starting acqusition. Add in use of StatusMessage param to notify users of errors.

--- a/example/exampleApp/src/Makefile
+++ b/example/exampleApp/src/Makefile
@@ -52,7 +52,7 @@ include $(TOP)/configure/RULES
 #  ADD RULES AFTER THIS LINE
 
 EXAMPLE_REQ:
-	mv /home/controls/var/ADnED/example.req /home/controls/var/ADnED/example.req.old
+	-mv /home/controls/var/ADnED/example.req /home/controls/var/ADnED/example.req.old
 	sed 's/$$(P)/BL99:Det:ADnED:/g' $(ADNED)/ADnED.req.template > /home/controls/var/ADnED/example.req
 
 buildInstall: EXAMPLE_REQ
