--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -340,13 +340,12 @@ record(mbbi, "$(P)$(R)AllocSpaceStatus_RBV")
 #}
 
 # ///
-# /// Redefine Acquire record to not be busy type.
-# /// This is so we can use callback on the start process.
-# /// This needs to be a different name because we cannot redefine record type.
+# /// Use this Start record to do callback when we have completed
+# /// start process. The standard Acquire record blocks until we stop.
 # ///
-record(bo, "$(P)$(R)Start") {
+record(busy, "$(P)$(R)Start") {
    field(DTYP, "asynInt32")
-   field(OUT, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ACQUIRE")
+   field(OUT, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_START")
    field(ZNAM, "Done")
    field(ONAM, "Acquire")
    field(VAL,  "0")
