Add records and code to load a pixel map file into an array, for each detector. I added the records for the TOF transformation too (but code for that not done).

--- a/ADnED.req.template
+++ b/ADnED.req.template
@@ -26,6 +26,8 @@ $(P)Det1:TOF:Stat1:BgdWidth
 $(P)Det1:XY:ROI1:EnableCallbacks
 $(P)Det1:XY:ROI1:MinX
 $(P)Det1:XY:ROI1:SizeX
+$(P)Det1:TOFTransFile
+$(P)Det1:PixelMapFile
 
 $(P)Det2:Description
 $(P)Det2:PixelNumStart
@@ -49,6 +51,8 @@ $(P)Det2:TOF:Stat1:BgdWidth
 $(P)Det2:XY:ROI1:EnableCallbacks
 $(P)Det2:XY:ROI1:MinX
 $(P)Det2:XY:ROI1:SizeX
+$(P)Det2:TOFTransFile
+$(P)Det2:PixelMapFile
 
 $(P)Det3:Description
 $(P)Det3:PixelNumStart
@@ -72,6 +76,8 @@ $(P)Det3:TOF:Stat1:BgdWidth
 $(P)Det3:XY:ROI1:EnableCallbacks
 $(P)Det3:XY:ROI1:MinX
 $(P)Det3:XY:ROI1:SizeX
+$(P)Det3:TOFTransFile
+$(P)Det3:PixelMapFile
 
 $(P)Det4:Description
 $(P)Det4:PixelNumStart
@@ -95,3 +101,5 @@ $(P)Det4:TOF:Stat1:BgdWidth
 $(P)Det4:XY:ROI1:EnableCallbacks
 $(P)Det4:XY:ROI1:MinX
 $(P)Det4:XY:ROI1:SizeX
+$(P)Det4:TOFTransFile
+$(P)Det4:PixelMapFile
