--- a/ADnEDApp/Db/ADnEDDetector.template
+++ b/ADnEDApp/Db/ADnEDDetector.template
@@ -218,6 +218,63 @@ record(bi, "$(P)$(R)Det$(DET):TOFROIFilterEnable_RBV")
 }
 
 
+#####################################################################
+# Full path and filename of the TOF transformation file
+
+# ///
+# /// TOF Transformation File
+# /// This is loaded into an array, which is used to transform the 
+# /// TOF spectrum. For example, we can create a d-space spectrum 
+# /// by defining the multiplication factors in the file for each pixel ID.
+# ///
+record(waveform, "$(P)$(R)Det$(DET):TOFTransFile")
+{
+    field(DTYP, "asynOctetWrite")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE")
+    field(FTVL, "CHAR")
+    field(NELM, "1024") 
+}
+
+# ///
+# /// TOF Transformation File Readback
+# ///
+record(waveform, "$(P)$(R)Det$(DET):TOFTransFile_RBV")
+{
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE")
+    field(FTVL, "CHAR")
+    field(NELM, "1024")
+    field(SCAN, "I/O Intr")
+}
+
+#####################################################################
+# Full path and filename of the pixel map file
+
+# ///
+# /// Pixel Map File
+# /// This is loaded into an array, which is used to map the pixel
+# /// ID to a new location in the detector array. 
+# ///
+record(waveform, "$(P)$(R)Det$(DET):PixelMapFile")
+{
+    field(DTYP, "asynOctetWrite")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_PIXEL_MAP_FILE")
+    field(FTVL, "CHAR")
+    field(NELM, "1024")
+}
+
+# ///
+# /// Pixel Map File Readback
+# ///
+record(waveform, "$(P)$(R)Det$(DET):PixelMapFile_RBV")
+{
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_PIXEL_MAP_FILE")
+    field(FTVL, "CHAR")
+    field(NELM, "1024")
+    field(SCAN, "I/O Intr")
+}
+
 
 
 
