New class to deal with mapping file formats. Logic to open and parse the file is now in ADnEDFile.

--- a/ADnEDApp/src/Makefile
+++ b/ADnEDApp/src/Makefile
@@ -17,6 +17,7 @@ DBD += ADnEDSupport.dbd
 ADnEDSupport_SRCS += ADnED.cpp
 ADnEDSupport_SRCS += nEDChannel.cpp
 ADnEDSupport_SRCS += ADnEDPixelROI.cpp
+ADnEDSupport_SRCS += ADnEDFile.cpp
 
 ADnEDSupport_LIBS += $(EPICS_BASE_IOC_LIBS)
 
