Add pixel data XY ROI, Array and Stats plugins.

--- a/st.cmd.config
+++ b/st.cmd.config
@@ -31,10 +31,28 @@ NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
-#ROI plugins to extract pixel event data and do X/Y mapping
+#ROI plugins to extract pixel event data
 NDROIConfigure("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+
+#ROI plugins to do ROI on the pixel event data
+NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY.ROI1", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+
+#Standard arrays plugin for channel access visualisation of pixel event data
+NDStdArraysConfigure("DET1.XY.ARR", 100, 0, "DET1.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("DET2.XY.ARR", 100, 0, "DET2.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("DET3.XY.ARR", 100, 0, "DET3.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("DET4.XY.ARR", 100, 0, "DET4.XY", 0, -1, 0, 0)
+
+#Stats plugins for ROI on pixel event data
+NDStatsConfigure("DET1.XY.STAT1", 100, 0, "DET1.XY.ROI1", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
 
 #End of st.cmd.config
