--- a/ADnEDApp/Db/ADnEDDetectorPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPlugin.template
@@ -3,7 +3,7 @@
 #
 # areaDetector nED client template file. This is used to automatically
 # configure the plugin ROIs for a single detector. It copies the NDArray
-# index numbers published by the main driver into the ROI Min and Size records.
+# index numbers published by the main driver into the ROI Min and End records.
 # This works for both a detector and beam monitor. It assumes there is
 # a ROI plugin extracting the block of data for this detector for
 # both the pixel and the TOF data (2 ROI plugins).
@@ -32,7 +32,7 @@ record(calcout, "$(P)$(R)Det$(DET):ConfigTOFStart")
 }
 
 # ///
-# /// Copy NDArray TOF Size to SizeX of ROI plugin
+# /// Copy NDArray TOF Size to EndX of ROI plugin
 # ///
 record(calcout, "$(P)$(R)Det$(DET):ConfigTOFSize")
 {
@@ -71,7 +71,6 @@ substitute "ADDR=0"
 substitute "NDARRAY_ADDR=0"
 
 # TOF Initial ROI
-
 substitute "R=ADnED:Det$(DET):TOF:"
 substitute "PORT=DET$(DET).TOF"
 substitute "NDARRAY_PORT=$(ADNED_PORT)"
@@ -116,13 +115,36 @@ include "NDPluginBase.template"
 include "NDROI.template"
 
 # Pixel X/Y Waveform
-
+substitute "R=ADnED:Det$(DET):XY:Array:"
+substitute "PORT=DET$(DET).XY.ARR"
+substitute "NDARRAY_PORT=DET$(DET).XY"
+include "NDPluginBase.template"
+substitute "TYPE=Int32"
+substitute "FTVL=LONG"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "NDStdArrays.template"
 
 # Pixel X/Y Second ROI
-
+substitute "R=ADnED:Det$(DET):XY:ROI1:"
+substitute "PORT=DET$(DET).XY.ROI1"
+substitute "NDARRAY_PORT=DET$(DET).XY"
+include "NDPluginBase.template"
+include "NDROI.template"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
 # Pixel X/Y Stats
-
+substitute "R=ADnED:Det$(DET):XY:Stat1:"
+substitute "PORT=DET$(DET).XY.STAT1"
+substitute "NDARRAY_PORT=DET$(DET).XY.ROI1"
+include "NDPluginBase.template"
+substitute "NCHANS=1024"
+substitute "HIST_SIZE=1"
+substitute "XSIZE=1"
+substitute "YSIZE=1"
+include "NDStats.template"
 
 
 
