Add extra ROI and Stats plugin for each Det to provide a PV that can be used for XY plot auto-scaling.

--- a/ADnED.req.template
+++ b/ADnED.req.template
@@ -4,9 +4,13 @@ $(P)TOFMax
 $(P)NumDetectors
 $(P)ArrayCallbacks
 
+
+
+
 $(P)Det1:Description
 $(P)Det1:PixelNumStart
 $(P)Det1:PixelNumEnd
+
 $(P)Det1:TOFROIFilterStart
 $(P)Det1:TOFROIFilterEnd
 $(P)Det1:TOFROIFilterEnable
@@ -23,15 +27,35 @@ $(P)Det1:TOF:ROI1:MinX
 $(P)Det1:TOF:ROI1:EndX
 $(P)Det1:TOF:Stat1:EnableCallbacks
 $(P)Det1:TOF:Stat1:BgdWidth
+
+$(P)Det1:XY:MinX
+$(P)Det1:XY:SizeX
+$(P)Det1:XY:BinX
+$(P)Det1:XY:EnableScale
+$(P)Det1:XY:Scale
+$(P)Det1:XY:Array:EnableCallbacks
+$(P)Det1:XY:Array:MinCallbackTime
 $(P)Det1:XY:ROI1:EnableCallbacks
 $(P)Det1:XY:ROI1:MinX
-$(P)Det1:XY:ROI1:SizeX
+$(P)Det1:XY:ROI1:EndX
+$(P)Det1:XY:Stat1:EnableCallbacks
+$(P)Det1:XY:Stat1:BgdWidth
+$(P)Det1:XY:ROIScale:EnableCallbacks
+$(P)Det1:XY:ROIScale:MinX
+$(P)Det1:XY:ROIScale:EndX
+$(P)Det1:XY:StatScale:EnableCallbacks
+$(P)Det1:XY:StatScale:BgdWidth
+
 $(P)Det1:TOFTransFile
 $(P)Det1:PixelMapFile
+
+
+
 
 $(P)Det2:Description
 $(P)Det2:PixelNumStart
 $(P)Det2:PixelNumEnd
+
 $(P)Det2:TOFROIFilterStart
 $(P)Det2:TOFROIFilterEnd
 $(P)Det2:TOFROIFilterEnable
@@ -48,15 +72,35 @@ $(P)Det2:TOF:ROI1:MinX
 $(P)Det2:TOF:ROI1:EndX
 $(P)Det2:TOF:Stat1:EnableCallbacks
 $(P)Det2:TOF:Stat1:BgdWidth
+
+$(P)Det2:XY:MinX
+$(P)Det2:XY:SizeX
+$(P)Det2:XY:BinX
+$(P)Det2:XY:EnableScale
+$(P)Det2:XY:Scale
+$(P)Det2:XY:Array:EnableCallbacks
+$(P)Det2:XY:Array:MinCallbackTime
 $(P)Det2:XY:ROI1:EnableCallbacks
 $(P)Det2:XY:ROI1:MinX
-$(P)Det2:XY:ROI1:SizeX
+$(P)Det2:XY:ROI1:EndX
+$(P)Det2:XY:Stat1:EnableCallbacks
+$(P)Det2:XY:Stat1:BgdWidth
+$(P)Det2:XY:ROIScale:EnableCallbacks
+$(P)Det2:XY:ROIScale:MinX
+$(P)Det2:XY:ROIScale:EndX
+$(P)Det2:XY:StatScale:EnableCallbacks
+$(P)Det2:XY:StatScale:BgdWidth
+
 $(P)Det2:TOFTransFile
 $(P)Det2:PixelMapFile
+
+
+
 
 $(P)Det3:Description
 $(P)Det3:PixelNumStart
 $(P)Det3:PixelNumEnd
+
 $(P)Det3:TOFROIFilterStart
 $(P)Det3:TOFROIFilterEnd
 $(P)Det3:TOFROIFilterEnable
@@ -73,15 +117,35 @@ $(P)Det3:TOF:ROI1:MinX
 $(P)Det3:TOF:ROI1:EndX
 $(P)Det3:TOF:Stat1:EnableCallbacks
 $(P)Det3:TOF:Stat1:BgdWidth
+
+$(P)Det3:XY:MinX
+$(P)Det3:XY:SizeX
+$(P)Det3:XY:BinX
+$(P)Det3:XY:EnableScale
+$(P)Det3:XY:Scale
+$(P)Det3:XY:Array:EnableCallbacks
+$(P)Det3:XY:Array:MinCallbackTime
 $(P)Det3:XY:ROI1:EnableCallbacks
 $(P)Det3:XY:ROI1:MinX
-$(P)Det3:XY:ROI1:SizeX
+$(P)Det3:XY:ROI1:EndX
+$(P)Det3:XY:Stat1:EnableCallbacks
+$(P)Det3:XY:Stat1:BgdWidth
+$(P)Det3:XY:ROIScale:EnableCallbacks
+$(P)Det3:XY:ROIScale:MinX
+$(P)Det3:XY:ROIScale:EndX
+$(P)Det3:XY:StatScale:EnableCallbacks
+$(P)Det3:XY:StatScale:BgdWidth
+
 $(P)Det3:TOFTransFile
 $(P)Det3:PixelMapFile
+
+
+
 
 $(P)Det4:Description
 $(P)Det4:PixelNumStart
 $(P)Det4:PixelNumEnd
+
 $(P)Det4:TOFROIFilterStart
 $(P)Det4:TOFROIFilterEnd
 $(P)Det4:TOFROIFilterEnable
@@ -98,8 +162,24 @@ $(P)Det4:TOF:ROI1:MinX
 $(P)Det4:TOF:ROI1:EndX
 $(P)Det4:TOF:Stat1:EnableCallbacks
 $(P)Det4:TOF:Stat1:BgdWidth
+
+$(P)Det4:XY:MinX
+$(P)Det4:XY:SizeX
+$(P)Det4:XY:BinX
+$(P)Det4:XY:EnableScale
+$(P)Det4:XY:Scale
+$(P)Det4:XY:Array:EnableCallbacks
+$(P)Det4:XY:Array:MinCallbackTime
 $(P)Det4:XY:ROI1:EnableCallbacks
 $(P)Det4:XY:ROI1:MinX
-$(P)Det4:XY:ROI1:SizeX
+$(P)Det4:XY:ROI1:EndX
+$(P)Det4:XY:Stat1:EnableCallbacks
+$(P)Det4:XY:Stat1:BgdWidth
+$(P)Det4:XY:ROIScale:EnableCallbacks
+$(P)Det4:XY:ROIScale:MinX
+$(P)Det4:XY:ROIScale:EndX
+$(P)Det4:XY:StatScale:EnableCallbacks
+$(P)Det4:XY:StatScale:BgdWidth
+
 $(P)Det4:TOFTransFile
 $(P)Det4:PixelMapFile
