--- a/st.cmd.config
+++ b/st.cmd.config
@@ -55,4 +55,17 @@ NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
 
+# Plugins used for auto scaling
+
+#ROI plugins to do ROI on the pixel event data to provide auto scaling
+NDROIConfigure("DET1.XY.ROI.SCALE", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY.ROI.SCALE", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY.ROI.SCALE", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY.ROI.SCALE", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+#Stats plugins for ROI on pixel event data to provide an auto scaling PV
+NDStatsConfigure("DET1.XY.STAT.SCALE", 100, 0, "DET1.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET2.XY.STAT.SCALE", 100, 0, "DET2.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET3.XY.STAT.SCALE", 100, 0, "DET3.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET4.XY.STAT.SCALE", 100, 0, "DET4.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+
 #End of st.cmd.config
