Add comments describing plugins.

--- a/st.cmd.config
+++ b/st.cmd.config
@@ -7,6 +7,8 @@ ADnEDConfig("NED", -1, -1, 1)
 
 #asynSetTraceMask("NED",0,0x11)
 
+# Plugins for TOF data
+
 #ROI plugins to extract TOF data
 NDROIConfigure("DET1.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET2.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
@@ -31,6 +33,9 @@ NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
+# Plugins for pixel data
+
+# NOTE: these next 4 need to change to ADnEDPixelROI plugins
 #ROI plugins to extract pixel event data
 NDROIConfigure("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
