--- a/ADnEDApp/Db/ADnEDPixelROI.template
+++ b/ADnEDApp/Db/ADnEDPixelROI.template
@@ -3,7 +3,7 @@
 # areaDetector nED client template file. This is the template
 # for the ADnEDPixelROI plugin. This was based on the original
 # ROI plugin template, but has had some things removed and
-# things added to deal with X/Y pixel mapping.
+# things added to deal with 1-D to 2-D conversion.
 #
 # Matt Pearson
 # Oct 14
@@ -24,200 +24,133 @@ record(stringout, "$(P)$(R)Name")
 {
    field(PINI, "YES")
    field(DTYP, "asynOctetWrite")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))NAME")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_NAME")
 }
 
 record(stringin, "$(P)$(R)Name_RBV")
 {
    field(DTYP, "asynOctetRead")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))NAME")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_NAME")
    field(SCAN, "I/O Intr")
 }
 
 ###################################################################
 #  These records control the ROI definition                       #
-#  including binning, region start and size                       # 
+#  including region start and size                                # 
 ###################################################################
 
-record(longout, "$(P)$(R)BinX")
+
+record(longout, "$(P)$(R)Min0")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_BIN")
-   field(VAL,  "1")
-}
-
-record(longin, "$(P)$(R)BinX_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_BIN")
-   field(SCAN, "I/O Intr")
-}
-
-record(longout, "$(P)$(R)BinY")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_BIN")
-   field(VAL,  "1")
-}
-
-record(longin, "$(P)$(R)BinY_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_BIN")
-   field(SCAN, "I/O Intr")
-}
-
-record(longout, "$(P)$(R)MinX")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_MIN")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_MIN")
    field(LOPR, "0")
    field(VAL,  "0")
 }
 
-record(longin, "$(P)$(R)MinX_RBV")
+record(longin, "$(P)$(R)Min0_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_MIN")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_MIN")
    field(SCAN, "I/O Intr")
 }
 
-record(longout, "$(P)$(R)MinY")
+record(longout, "$(P)$(R)Min1")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_MIN")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_MIN")
    field(LOPR, "0")
    field(VAL,  "0")
 }
 
-record(longin, "$(P)$(R)MinY_RBV")
+record(longin, "$(P)$(R)Min1_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_MIN")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_MIN")
    field(SCAN, "I/O Intr")
 }
 
-record(longout, "$(P)$(R)SizeX")
+record(longout, "$(P)$(R)Min2")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_SIZE")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_MIN")
+   field(LOPR, "0")
+   field(VAL,  "0")
+}
+
+record(longin, "$(P)$(R)Min2_RBV")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_MIN")
+   field(SCAN, "I/O Intr")
+}
+
+record(longout, "$(P)$(R)Size0")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_SIZE")
    field(VAL,  "1000000")
 }
 
-record(longin, "$(P)$(R)SizeX_RBV")
+record(longin, "$(P)$(R)Size0_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_SIZE")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_SIZE")
    field(SCAN, "I/O Intr")
 }
 
-record(longout, "$(P)$(R)SizeY")
+record(longout, "$(P)$(R)Size1")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_SIZE")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_SIZE")
    field(VAL,  "1000000")
 }
 
-record(longin, "$(P)$(R)SizeY_RBV")
+record(longin, "$(P)$(R)Size1_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_SIZE")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_SIZE")
    field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(P)$(R)AutoSizeX")
+record(longout, "$(P)$(R)Size2")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_AUTO_SIZE")
-   field(VAL,  "0")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_SIZE")
+   field(VAL,  "1000000")
 }
 
-record(bi, "$(P)$(R)AutoSizeX_RBV")
+record(longin, "$(P)$(R)Size2_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_AUTO_SIZE")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_SIZE")
    field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(P)$(R)AutoSizeY")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_AUTO_SIZE")
-   field(VAL,  "0")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-}
-
-record(bi, "$(P)$(R)AutoSizeY_RBV")
+record(longin, "$(P)$(R)MaxSize0_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_AUTO_SIZE")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_MAX_SIZE")
    field(SCAN, "I/O Intr")
 }
 
-record(longin, "$(P)$(R)MaxSizeX_RBV")
+record(longin, "$(P)$(R)MaxSize1_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_MAX_SIZE")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_MAX_SIZE")
    field(SCAN, "I/O Intr")
 }
 
-record(longin, "$(P)$(R)MaxSizeY_RBV")
+record(longin, "$(P)$(R)MaxSize2_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_MAX_SIZE")
-   field(SCAN, "I/O Intr")
-}
-
-record(bo, "$(P)$(R)ReverseX")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_REVERSE")
-   field(VAL,  "0")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-}
-
-record(bi, "$(P)$(R)ReverseX_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_REVERSE")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-   field(SCAN, "I/O Intr")
-}
-
-record(bo, "$(P)$(R)ReverseY")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_REVERSE")
-   field(VAL,  "0")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-}
-
-record(bi, "$(P)$(R)ReverseY_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_REVERSE")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_MAX_SIZE")
    field(SCAN, "I/O Intr")
 }
 
@@ -235,90 +168,12 @@ record(longin, "$(P)$(R)ArraySizeY_RBV")
    field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(P)$(R)EnableX")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_ENABLE")
-   field(VAL,  "1")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-}
-
-record(bi, "$(P)$(R)EnableX_RBV")
+record(longin, "$(P)$(R)ArraySizeZ_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM0_ENABLE")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-   field(ZSV,  "NO_ALARM")
-   field(OSV,  "MINOR")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ARRAY_SIZE_Z")
    field(SCAN, "I/O Intr")
 }
-
-record(bo, "$(P)$(R)EnableY")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_ENABLE")
-   field(VAL,  "1")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-}
-
-record(bi, "$(P)$(R)EnableY_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DIM1_ENABLE")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-   field(ZSV,  "NO_ALARM")
-   field(OSV,  "MINOR")
-   field(SCAN, "I/O Intr")
-}
-
-###################################################################
-#  These records control the scaling of the data.  Useful when    #
-#  binning or converting data types                               # 
-###################################################################
-
-record(bo, "$(P)$(R)EnableScale")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ENABLE_SCALE")
-   field(VAL,  "0")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-}
-
-record(bi, "$(P)$(R)EnableScale_RBV")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ENABLE_SCALE")
-   field(ZNAM, "Disable")
-   field(ONAM, "Enable")
-   field(ZSV,  "NO_ALARM")
-   field(OSV,  "MINOR")
-   field(SCAN, "I/O Intr")
-}
-
-record(ao, "$(P)$(R)Scale")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynFloat64")
-   field(VAL,  "1")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))SCALE_VALUE")
-   field(VAL,  "1")
-}
-
-record(ai, "$(P)$(R)Scale_RBV")
-{
-   field(DTYP, "asynFloat64")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))SCALE_VALUE")
-   field(SCAN, "I/O Intr")
-}
-
 
 ###################################################################
 #  These records control the data type of the array data          # 
@@ -330,7 +185,7 @@ record(mbbo, "$(P)$(R)DataTypeOut")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ROI_DATA_TYPE")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_ROI_DATA_TYPE")
    field(ZRST, "Int8")
    field(ZRVL, "0")
    field(ONST, "UInt8")
@@ -355,7 +210,7 @@ record(mbbo, "$(P)$(R)DataTypeOut")
 record(mbbi, "$(P)$(R)DataTypeOut_RBV")
 {
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ROI_DATA_TYPE")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_ROI_DATA_TYPE")
    field(ZRST, "Int8")
    field(ZRVL, "0")
    field(ONST, "UInt8")
@@ -382,32 +237,32 @@ record(mbbi, "$(P)$(R)DataTypeOut_RBV")
 #  and size to the maximum for the input array                    #
 ###################################################################
 
-record(longin, "$(P)$(R)MaxX")
-{
-    field(INP,  "$(P)$(R)MaxSizeX_RBV CP")
-    field(FLNK, "$(P)$(R)SetXHOPR.PROC PP")
-}
+#record(longin, "$(P)$(R)MaxX")
+#{
+#    field(INP,  "$(P)$(R)MaxSizeX_RBV CP")
+#    field(FLNK, "$(P)$(R)SetXHOPR.PROC PP")
+#}
 
-record(dfanout, "$(P)$(R)SetXHOPR")
-{
-    field(DOL,  "$(P)$(R)MaxX NPP")
-    field(OMSL, "closed_loop")
-    field(OUTA, "$(P)$(R)MinX.HOPR NPP")
-    field(OUTB, "$(P)$(R)SizeX.HOPR NPP")
-}
+#record(dfanout, "$(P)$(R)SetXHOPR")
+#{
+#    field(DOL,  "$(P)$(R)MaxX NPP")
+#    field(OMSL, "closed_loop")
+#    field(OUTA, "$(P)$(R)MinX.HOPR NPP")
+#    field(OUTB, "$(P)$(R)SizeX.HOPR NPP")
+#}
 
-record(longin, "$(P)$(R)MaxY")
-{
-    field(INP,  "$(P)$(R)MaxSizeY_RBV CP")
-    field(FLNK, "$(P)$(R)SetYHOPR.PROC PP")
-}
+#record(longin, "$(P)$(R)MaxY")
+#{
+#    field(INP,  "$(P)$(R)MaxSizeY_RBV CP")
+#    field(FLNK, "$(P)$(R)SetYHOPR.PROC PP")
+#}
 
-record(dfanout, "$(P)$(R)SetYHOPR")
-{
-    field(DOL,  "$(P)$(R)MaxY NPP")
-    field(OMSL, "closed_loop")
-    field(OUTA, "$(P)$(R)MinY.HOPR NPP")
-    field(OUTB, "$(P)$(R)SizeY.HOPR NPP")
-}
+#record(dfanout, "$(P)$(R)SetYHOPR")
+#{
+#    field(DOL,  "$(P)$(R)MaxY NPP")
+#    field(OMSL, "closed_loop")
+#    field(OUTA, "$(P)$(R)MinY.HOPR NPP")
+#    field(OUTB, "$(P)$(R)SizeY.HOPR NPP")
+#}
 
 
