--- a/st.cmd.config
+++ b/st.cmd.config
@@ -35,12 +35,11 @@ NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
 # Plugins for pixel data
 
-# NOTE: these next 4 need to change to ADnEDPixelROI plugins
 #ROI plugins to extract pixel event data
-NDROIConfigure("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 
 #ROI plugins to do ROI on the pixel event data
 NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
