--- a/example/exampleApp/src/Makefile
+++ b/example/exampleApp/src/Makefile
@@ -53,6 +53,6 @@ include $(TOP)/configure/RULES
 
 EXAMPLE_REQ:
 	-mv /home/controls/var/ADnED/example.req /home/controls/var/ADnED/example.req.old
-	sed 's/$$(P)/BL99:Det:ADnED:/g' $(ADNED)/ADnED.req.template > /home/controls/var/ADnED/example.req
+	-sed 's/$$(P)/BL99:Det:ADnED:/g' $(ADNED)/ADnED.req.template > /home/controls/var/ADnED/example.req
 
 buildInstall: EXAMPLE_REQ
