--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -14,6 +14,10 @@
 # ADDR - Asyn address (set to zero)
 # TIMEOUT - Asyn timeout
 # TOFSIZE - The size of the waveforms for the TOF spectrums
+# DET1SIZE - The size of the DET1 waveform
+# DET2SIZE - The size of the DET2 waveform
+# DET3SIZE - The size of the DET3 waveform
+# DET4SIZE - The size of the DET4 waveform
 #
 #####################################################################
 
@@ -382,18 +386,34 @@ substitute "DET=1"
 substitute "TOFROI=TOF"
 substitute "PIXROI=XY"
 include "ADnEDDetectorPlugin.template"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "ADnEDDetectorTOFPlugin.template"
+substitute "NELEMENTS=$(DET1SIZE)"
+include "ADnEDDetectorPixelPlugin.template"
 
 substitute "R=ADnED:"
 substitute "DET=2"
 include "ADnEDDetectorPlugin.template"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "ADnEDDetectorTOFPlugin.template"
+substitute "NELEMENTS=$(DET2SIZE)"
+include "ADnEDDetectorPixelPlugin.template"
 
 substitute "R=ADnED:"
 substitute "DET=3"
 include "ADnEDDetectorPlugin.template"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "ADnEDDetectorTOFPlugin.template"
+substitute "NELEMENTS=$(DET3SIZE)"
+include "ADnEDDetectorPixelPlugin.template"
 
 substitute "R=ADnED:"
 substitute "DET=4"
 include "ADnEDDetectorPlugin.template"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "ADnEDDetectorTOFPlugin.template"
+substitute "NELEMENTS=$(DET4SIZE)"
+include "ADnEDDetectorPixelPlugin.template"
 
 ##########################################################################
 
