Add support for a scale factor and offset to the TOF transformation, to aid binning in existing array and waveform.

--- a/ADnED.req.template
+++ b/ADnED.req.template
@@ -51,6 +51,8 @@ $(P)Det1:XY:StatScale:BgdWidth
 
 $(P)Det1:TOFTransFile
 $(P)Det1:TOFTransEnable
+$(P)Det1:TOFTransOffset
+$(P)Det1:TOFTransScale
 $(P)Det1:PixelMapFile
 $(P)Det1:PixelMapEnable
 
@@ -100,6 +102,8 @@ $(P)Det2:XY:StatScale:BgdWidth
 
 $(P)Det2:TOFTransFile
 $(P)Det2:TOFTransEnable
+$(P)Det2:TOFTransOffset
+$(P)Det2:TOFTransScale
 $(P)Det2:PixelMapFile
 $(P)Det2:PixelMapEnable
 
@@ -149,6 +153,8 @@ $(P)Det3:XY:StatScale:BgdWidth
 
 $(P)Det3:TOFTransFile
 $(P)Det3:TOFTransEnable
+$(P)Det3:TOFTransOffset
+$(P)Det3:TOFTransScale
 $(P)Det3:PixelMapFile
 $(P)Det3:PixelMapEnable
 
@@ -198,5 +204,7 @@ $(P)Det4:XY:StatScale:BgdWidth
 
 $(P)Det4:TOFTransFile
 $(P)Det4:TOFTransEnable
+$(P)Det4:TOFTransOffset
+$(P)Det4:TOFTransScale
 $(P)Det4:PixelMapFile
 $(P)Det4:PixelMapEnable
