Add autosave info tags.

--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -172,6 +172,7 @@ record(ao, "$(P)$(R)EventUpdatePeriod")
    field(PREC, "0")
    field(VAL, "100")
    field(PINI, "YES")
+   info(autosaveFields, "VAL")
 }
 
 # ///
@@ -197,7 +198,9 @@ record(waveform, "$(P)$(R)PVName")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_PV_NAME")
     field(FTVL, "CHAR")
     field(NELM, "256")
+   info(autosaveFields, "VAL")
 }
+
 record(waveform, "$(P)$(R)PVName_RBV")
 {
     field(DTYP, "asynOctetRead")
@@ -218,6 +221,7 @@ record(ao, "$(P)$(R)FrameUpdatePeriod")
    field(PREC, "0")
    field(VAL, "100")
    field(PINI, "YES")
+   info(autosaveFields, "VAL")
 }
 
 # ///
@@ -244,6 +248,7 @@ record(longout, "$(P)$(R)NumDetectors")
    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_NUM_DET")
    field(VAL, "0")
    field(PINI, "YES")
+   info(autosaveFields, "VAL")
 }
 
 # ///
@@ -268,6 +273,7 @@ record(longout, "$(P)$(R)TOFMax")
    field(VAL, "$(TOFSIZE)")
    field(PINI, "YES")
    field(EGU, "100ns")
+   info(autosaveFields, "VAL")
 }
 
 # ///
